2010-08-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #14773: Styling issue when selecting position of new created page

2010-08-05  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15343: dbClientCompress crashes with pconnect
	* Fixed bug #15280: felogin redirect doesn't work anymore after update to latest releases (4.2x - 4.4.x) (thanks to Helmut Hummel)
	* Fixed bug #15282: It is impossible to set links to files any more with the link wizard
	* Fixed bug #15336: sys_actions shows wrong error if an "Record List" action is not propertly configured (thanks to Stefan Galinski)

2010-08-03  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15313: Link to deprecation logfile doesn't work in installations inside a subdirectory (thanks to Stefan Galinski)

2010-08-03  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15265: InstallTool-login not possible after Update to 4.4.1 due to session_start() in extensions (thanks to Ernesto Baschny and Helmut Hummel)

2010-08-02  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15289: Element-Browser page tree has HSC'ed <span> elements

2010-08-01  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15321: Unused variable $warningItems in tx_install (thanks to Markus Klein)

2010-08-01  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15292: Fatal error in DB browser because of wrong sprite API usage (thanks to Alexandre Gravel-Raymond)

2010-07-30  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to bug #15188: Remove default greyed out effect for CEs (Thanks to Steffen Gebert)
	* Fixed bug #15295: Page treeFilter not re-applied after branch toggling (Thanks to Felix Kopp)
	
2010-07-29  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #13427: t3lib_div::cleanOutputBuffers() might loop forever (thanks to Stephan Seitz and Steffen Gebert)

2010-07-28  Benjamin Mack  <benni@typo3.org>

	* Release of TYPO3 4.4.1

2010-07-28  Oliver Hader  <oliver@typo3.org>

	* Raised Extbase and Fluid from 1.2.0 to 1.2.1