@@ -1,3 +1,7 @@
+2010-08-05  Steffen Kamper  <steffen@typo3.org>
+
+	* Fixed bug #12646: Click on icon does not open/close sections
+
 2010-08-05  Steffen Gebert  <steffen@steffen-gebert.de>
 
 	* Fixed bug #14773: Styling issue when selecting position of new created page
